--- a/src/Pages/AuthenticationPages/UserAuth.css
+++ b/src/Pages/AuthenticationPages/UserAuth.css
@@ -1,100 +1,89 @@
-body
-{
-    height: 100vh;
+body {
+  height: 100vh;
 }
 
-.user-auth-content-container
-{
-    width: 100%;
-    min-height: calc(100vh - 107.23px);
-    background: url('../../Assets/Images/Library_pic1.jpg');
-    background-repeat: no-repeat; 
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.user-auth-content-container {
+  width: 100%;
+  min-height: calc(100vh - 107.23px);
+  background: url("../../Assets/Images/Library_pic1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.user-auth-form
-{
-    padding: 3rem 4rem;
-    max-width: fit-content;
-    text-align: left;
-    border: none;
+.user-auth-form {
+  padding: 3rem 4rem;
+  max-width: fit-content;
+  text-align: left;
+  border: none;
 }
 
-.user-auth-form input
-{
-    outline: none;
+.user-auth-form input {
+  outline: none;
 }
 
-.user-options-container
-{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.user-options-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.remember-me-container
-{
-    display: flex;
-    align-items: center;
+.remember-me-container {
+  display: flex;
+  align-items: center;
 }
 
-#forgot-password
-{
-    color: var(--royal-blue);
+#forgot-password {
+  color: var(--royal-blue);
 }
 
-.new-user-container
-{
-    display: flex;
-    justify-content: center;
+.new-user-container {
+  display: flex;
+  justify-content: center;
 }
 
-#new-user-link
-{
-    font-size: 1.6rem;
-    text-align: center;
+#new-user-link {
+  font-size: 1.6rem;
+  text-align: center;
 }
 
-.links-with-blue-underline, .links-with-blue-underline:visited, .links-with-blue-underline:hover, .links-with-blue-underline:active {
-    color: var(--royal-blue);
+.links-with-blue-underline,
+.links-with-blue-underline:visited,
+.links-with-blue-underline:hover,
+.links-with-blue-underline:active {
+  color: var(--royal-blue);
 }
 
-.links-with-blue-underline::after
-{
-    content: '';
-    display: block;
-    width: 0px;
-    height: 2px;
-    background: var(--royal-blue);
-    transition: width .3s;
+.links-with-blue-underline::after {
+  content: "";
+  display: block;
+  width: 0px;
+  height: 2px;
+  background: var(--royal-blue);
+  transition: width 0.3s;
 }
 
-.links-with-blue-underline:hover::after
-{
-    width: 100%;
+.links-with-blue-underline:hover::after {
+  width: 100%;
 }
 
-.accept-terms-container
-{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+.accept-terms-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.existing-user-container
-{
-    display: flex;
-    justify-content: center;
+.existing-user-container {
+  display: flex;
+  justify-content: center;
 }
 
-.existing-user-link
-{
-    font-size: 1.6rem;
-    width: fit-content;
-    text-align: center;
+.existing-user-link {
+  font-size: 1.6rem;
+  width: fit-content;
+  text-align: center;
 }
